# Anton-VST

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-18-defeedback-pro.md
docs/superpowers/specs/: 2026-03-18-defeedback-pro-design.md
models/: denoiser_1024.onnx  denoiser_128.onnx  denoiser_2048.onnx  denoiser_256.onnx  denoiser_512.onnx
modules/: FeedbackDetector.cpp  FeedbackDetector.h  MLProcessor.cpp  MLProcessor.h  MaskCombiner.cpp  MaskCombiner.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  SpectralEngine.cpp  SpectralEngine.h  SpectralSubtractor.cpp  SpectralSubtractor.h  SpectrumDisplay.cpp  SpectrumDisplay.h
scripts/: LICENSE_INSTALLER.txt  create_dummy_model.py  create_nsnet2_model.py  fix_ort_install_name.sh  install_windows.ps1  installer_win.iss  package_all.sh  package_macos.sh  package_windows.bat
tests/: FeedbackDetectorTest.cpp  MLProcessorTest.cpp  MaskCombinerTest.cpp  RingBufferTest.cpp  SpectralEngineTest.cpp  SpectralSubtractorTest.cpp
training/: README.md  dataset.py  model.py  train.py
